Adding inbuilt dataset notebook

--- a/1_basic_of_pytorch/1_basics_of_pytorch.ipynb
+++ b/1_basic_of_pytorch/1_basics_of_pytorch.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "85e41d28",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "781ff509",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "('torch.LongTensor', torch.int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,12 +131,12 @@
    "metadata": {},
    "source": [
     "Below is the pytorch data types,\n",
-    "<img src=\"data_types.png\" alt=\"data_types\" style=\"width: 800px;\"/>"
+    "<img src=\"images/data_types.png\" alt=\"data_types\" style=\"width: 800px;\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "7d5f6cf4-7b00-4d09-8975-d325e193d658",
    "metadata": {
     "tags": []
@@ -148,7 +148,7 @@
        "tensor([ 1.0000,  0.2300, 34.2300, -1.0000,  0.0000,  0.3400])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "ef1bd669",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# To update multiple tensor values, we need a tensor values only. \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Passing below error throws an Error\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m500\u001b[39m, \u001b[38;5;241m300\u001b[39m]\n\u001b[0;32m      4\u001b[0m a\n",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# To update multiple tensor values, we need a tensor values only. \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Passing below error throws an Error\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m500\u001b[39m, \u001b[38;5;241m300\u001b[39m]\n\u001b[0;32m      4\u001b[0m a\n",
       "\u001b[1;31mTypeError\u001b[0m: can't assign a list to a torch.LongTensor"
      ]
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "9ef85ac8",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "tensor([ 1.0000,  0.2000,  4.0000, 45.2340])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "85b9d02f",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "('torch.FloatTensor', torch.float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "f2197267",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "97aedcc8",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "tensor([1.0000, 2.0000, 0.4000, 0.9800])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f21d85b6",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "8ae2543a",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "torch.Size([4])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "be335c85-572d-498c-91bd-143d4d7c5a64",
    "metadata": {
     "tags": []
@@ -458,7 +458,7 @@
        "4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "2d26b65f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "66ce3f7a-6be5-48ed-95b4-c2c08476b85e",
    "metadata": {
     "tags": []
@@ -503,7 +503,7 @@
        "torch.Size([4])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "3d469551",
    "metadata": {},
    "outputs": [],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "79b29ce0",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "        [4]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "a17caa6b",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "        [3, 4]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "9b9a337f-6a94-43aa-b51e-e755861af5c4",
    "metadata": {
     "tags": []
@@ -593,7 +593,7 @@
        "tensor([[1, 2, 3, 4]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "73daaa2c-104b-4cbc-be0d-5ebdf6286d57",
    "metadata": {
     "tags": []
@@ -616,7 +616,7 @@
        "tensor([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "57c16a1a",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "        [3, 4]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "2e1eef71",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "(2, torch.Size([2, 2]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "f52e7194-488b-4ea9-9343-a35216b7a391",
    "metadata": {
     "tags": []
@@ -699,7 +699,7 @@
        "torch.Size([1, 4])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "214a341f-02e5-498f-a644-e566a515f738",
    "metadata": {
     "tags": []
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "39582518-27db-4d0a-8db5-f13bccf8612a",
    "metadata": {
     "tags": []
@@ -735,7 +735,7 @@
        "        [4, 5, 6, 7]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "fd8c7136-029c-4185-bfd9-d053ce8bb9fc",
    "metadata": {
     "tags": []
@@ -758,7 +758,7 @@
        "tensor([[1, 2, 3, 4, 4, 5, 6, 7]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "6dc6fbdf",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
        "tensor([1., 2., 3., 4.], dtype=torch.float64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "id": "428cc3aa",
    "metadata": {},
    "outputs": [
@@ -811,7 +811,7 @@
        "array([1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "id": "943fcf80",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
        "tensor([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "id": "27a58659",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "id": "3ec4a85c",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
        "tensor([1, 1])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "id": "2caaaf39",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
        "tensor([ 2,  4,  6,  8, 10])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "id": "66d410f4",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "tensor([3.3000, 5.0000, 9.0000])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "id": "2408e05b",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "tensor(10)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "id": "d0824b27",
    "metadata": {},
    "outputs": [],
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "id": "2b9c57d3",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
        "        [15, 24, 70]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "id": "83634c79",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1031,7 @@
        "        [15, 24, 70]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 45,
    "id": "b73d319a",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[58], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# dot product\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[45], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# dot product\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mRuntimeError\u001b[0m: 1D tensors expected, but got 2D and 2D tensors"
      ]
     }
@@ -1065,22 +1065,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "511853b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[11, 14, 17],\n",
-       "        [23, 30, 37]])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# matrix multiplication, also known as dot product.\n",
     "x = torch.tensor([[1, 2], \n",
@@ -1100,21 +1088,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "3eef1767",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean of tensor: 2.5\n",
-      "STD  of tensor: 1.2909944487358056\n",
-      "Min value in tensor: 1.0\n",
-      "Max value in tensor: 4.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "math_tensor = torch.tensor([1, 2, 3, 4], dtype=torch.float64)\n",
     "# NOTE: Mean input dtype must be either a floating point or complex dtype\n",
@@ -1129,12 +1106,12 @@
    "id": "287863fe",
    "metadata": {},
    "source": [
-    "<img src=\"trignometric_table.png\" alt=\"trignometry\" style=\"width: 800px;\"/>"
+    "<img src=\"images/trignometric_table.png\" alt=\"trignometry\" style=\"width: 800px;\"/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "id": "a3cf08fa",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1121,7 @@
        "tensor([0.0000, 0.5236, 0.7854, 1.0472, 1.5708, 3.1416, 4.7124, 6.2832])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "5bd6b2d3",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "0dda63cd",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1180,7 @@
        "        5.0000])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "id": "a2a88f4b",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "id": "9ae60883",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "id": "c389585d",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1221,7 @@
        "Text(0, 0.5, 'SIN values')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
