--- a/1_basic_of_pytorch/4_simple_dataset.ipynb
+++ b/1_basic_of_pytorch/4_simple_dataset.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "c594a42d-8a3a-4415-aa67-fa7146b18c24",
    "metadata": {
     "tags": []
@@ -275,7 +275,7 @@
        "(tensor([2., 2.]), tensor(1.))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "f00833ad",
    "metadata": {
     "tags": []
@@ -299,7 +299,7 @@
        "(tensor([3., 3.]), tensor(2.))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "22d41002-28f0-4457-9ba3-dc86f905cb47",
    "metadata": {
     "tags": []
@@ -323,7 +323,7 @@
        "(5, 10)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0e0d0742",
    "metadata": {
     "tags": []
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c1d94f4a",
    "metadata": {
     "tags": []
@@ -360,7 +360,7 @@
        "(tensor([3., 3.]), tensor(2.))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "aee3df46",
    "metadata": {
     "tags": []
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "48294059",
    "metadata": {
     "tags": []
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2830d84e",
    "metadata": {
     "tags": []
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "87152fd9-c297-45d2-b358-597f8c5ac4e2",
    "metadata": {
     "tags": []
@@ -452,7 +452,7 @@
        "(tensor([2., 2.]), tensor(1.))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "6c0d29ec",
    "metadata": {
     "tags": []
@@ -476,7 +476,7 @@
        "(tensor([300., 300.]), tensor(200.))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "ed0988f9-62a7-47d0-b866-1153725522a6",
    "metadata": {
     "tags": []
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "5b2dbbe6-5efd-4098-bbcd-8644ecd7fcd1",
    "metadata": {
     "tags": []
@@ -536,7 +536,7 @@
        "        [5, 4, 2]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "a348373a-d43a-4a99-a51b-cc79f99a065b",
    "metadata": {
     "tags": []
@@ -560,7 +560,7 @@
        "tensor([0, 1, 2])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "afbe9dba-8e37-40eb-af64-8853dff511de",
    "metadata": {
     "tags": []
@@ -581,10 +581,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataset.TensorDataset at 0x2a11b94bd10>"
+       "<torch.utils.data.dataset.TensorDataset at 0x21f35751d90>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "a6e7acb5-957e-45d2-b0d2-1e96eea4c0fe",
    "metadata": {
     "tags": []
@@ -608,7 +608,7 @@
        "(tensor([1, 2, 3]), tensor(0))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "6454ecce-4308-4c6d-848a-e86e20dc3a1e",
    "metadata": {
     "tags": []
@@ -678,8 +678,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch inputs: tensor([[7, 8, 9],\n",
-      "        [1, 2, 3]])\n",
+      "Batch inputs: tensor([[1, 2, 3],\n",
+      "        [7, 8, 9]])\n",
       "Batch targets: tensor([0, 0])\n",
       "\n",
       "Batch inputs: tensor([[4, 5, 6]])\n",
