--- a/1_basic_of_pytorch/5_dataset_for_images.ipynb
+++ b/1_basic_of_pytorch/5_dataset_for_images.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "b8ce4613",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1915a9607d0>"
+       "<torch._C.Generator at 0x2e4fe8f07b0>"
       ]
      },
      "execution_count": 2,
@@ -546,17 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "bad6e97e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1917e6ff990>"
+       "<matplotlib.image.AxesImage at 0x2e4ffd43b10>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "2ac4fab8-6d4a-4731-b57f-d39353649096",
    "metadata": {
     "tags": []
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "id": "9ae5d650-041e-439f-9542-d9689a3ffb2c",
    "metadata": {
     "tags": []
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "id": "80610dc8-b1d4-4f58-b4cc-f6957adb11b4",
    "metadata": {
     "tags": []
@@ -654,10 +654,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19143ef8b50>"
+       "<matplotlib.image.AxesImage at 0x2e4856be390>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "99a5bac0-107f-4e22-b1b4-60dd6c1b551c",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "7c0c00d2-d237-4106-9d85-eae6be728425",
    "metadata": {
     "tags": []
@@ -727,7 +727,7 @@
       "         [0, 0, 0,  ..., 0, 0, 0],\n",
       "         [0, 0, 0,  ..., 0, 0, 0]]], dtype=torch.int32)\n",
       "\n",
-      "Images Names: ('Pullover', 'Dress')\n"
+      "Images Names: ('Trouser', 'Shirt')\n"
      ]
     }
    ],
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "1dca7256-71fd-4649-8bb0-35fefd6c987d",
    "metadata": {
     "tags": []
@@ -752,7 +752,7 @@
        "30000"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "84376c42-6092-4eac-a252-8f5b17512af9",
    "metadata": {
     "tags": []
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "id": "6b94bdfa-11dd-4903-9bac-fc1edd762ba2",
    "metadata": {
     "tags": []
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "id": "a6300f7f-4dc9-478b-9c4e-7be9ce292b57",
    "metadata": {
     "tags": []
@@ -807,10 +807,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19143f846d0>"
+       "<matplotlib.image.AxesImage at 0x2e484e13910>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
