--- a/1_basic_of_pytorch/1_basics_of_pytorch.ipynb
+++ b/1_basic_of_pytorch/1_basics_of_pytorch.ipynb
@@ -100,7 +100,7 @@
     "# Creating a tensor\n",
     "a = torch.tensor([1, 2, 3, 4])\n",
     "\n",
-    "# can also create a tensor using below Tensor class\n",
+    "# can also create a tensor using below Tensor class, but there might be difference in data types\n",
     "# x = torch.Tensor([1, 2, 3])"
    ]
   },
@@ -768,6 +768,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3b1f54b8-68cc-497e-966a-48af6f4bdb78",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "zero-dimensional tensor (at position 1) cannot be concatenated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# we get error because first tensor is in 1-D and sencond one has 0-D\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: zero-dimensional tensor (at position 1) cannot be concatenated"
+     ]
+    }
+   ],
+   "source": [
+    "# we get error because first tensor is in 1-D and sencond one has 0-D\n",
+    "torch.cat([torch.tensor([1, 2, 3]), torch.tensor(1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f68aa14-8b27-477a-b3c0-894bb67ea069",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "torch.cat([torch.tensor([1, 2, 3]), torch.tensor([76])])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cad34de7",
    "metadata": {},
@@ -777,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "6dc6fbdf",
    "metadata": {},
    "outputs": [
@@ -787,7 +824,7 @@
        "tensor([1., 2., 3., 4.], dtype=torch.float64)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "428cc3aa",
    "metadata": {},
    "outputs": [
@@ -811,7 +848,7 @@
        "array([1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "943fcf80",
    "metadata": {},
    "outputs": [
@@ -834,7 +871,7 @@
        "tensor([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "27a58659",
    "metadata": {},
    "outputs": [
@@ -858,7 +895,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "3ec4a85c",
    "metadata": {},
    "outputs": [
@@ -888,7 +925,7 @@
        "tensor([1, 1])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "2caaaf39",
    "metadata": {},
    "outputs": [
@@ -913,7 +950,7 @@
        "tensor([ 2,  4,  6,  8, 10])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "66d410f4",
    "metadata": {},
    "outputs": [
@@ -937,7 +974,7 @@
        "tensor([3.3000, 5.0000, 9.0000])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "2408e05b",
    "metadata": {},
    "outputs": [
@@ -961,7 +998,7 @@
        "tensor(10)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "d0824b27",
    "metadata": {},
    "outputs": [],
@@ -998,30 +1035,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "2b9c57d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1,  4, 12],\n",
-       "        [15, 24, 70]])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.mul(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
-   "id": "83634c79",
+   "id": "2b9c57d3",
    "metadata": {},
    "outputs": [
     {
@@ -1037,12 +1052,34 @@
     }
    ],
    "source": [
-    "x*y"
+    "torch.mul(x, y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "83634c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  4, 12],\n",
+       "        [15, 24, 70]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x*y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "b73d319a",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1090,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# dot product\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[46], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# dot product\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mRuntimeError\u001b[0m: 1D tensors expected, but got 2D and 2D tensors"
      ]
     }
@@ -1065,10 +1102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "511853b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[11, 14, 17],\n",
+       "        [23, 30, 37]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# matrix multiplication, also known as dot product.\n",
     "x = torch.tensor([[1, 2], \n",
@@ -1088,10 +1137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "3eef1767",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of tensor: 2.5\n",
+      "STD  of tensor: 1.2909944487358056\n",
+      "Min value in tensor: 1.0\n",
+      "Max value in tensor: 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "math_tensor = torch.tensor([1, 2, 3, 4], dtype=torch.float64)\n",
     "# NOTE: Mean input dtype must be either a floating point or complex dtype\n",
@@ -1111,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "a3cf08fa",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1181,7 @@
        "tensor([0.0000, 0.5236, 0.7854, 1.0472, 1.5708, 3.1416, 4.7124, 6.2832])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "5bd6b2d3",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "0dda63cd",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1240,7 @@
        "        5.0000])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "a2a88f4b",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "9ae60883",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "id": "c389585d",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1281,7 @@
        "Text(0, 0.5, 'SIN values')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
